# learn-python

./: .gitignore  Python_Test.ipynb  README.md  Software_designing_mindset.ipynb  pyproject.toml  python-expert-advanced-python-programming.ipynb  python-software-design-mindset-arjan-codes.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml
4. deep dive oops/.ipynb_checkpoints/: 00 classes-checkpoint.ipynb
Advanced OOP with Python - beyond  the basics/.ipynb_checkpoints/: Advanced OOP with Python - beyond  the basics-checkpoint.ipynb
CS50/0 functions and variables/: 0_hello.py  calculator.py
Dependency Management With Python Poetry/: Dependency Management With Python Poetry.ipynb
Dependency Management With Python Poetry/.ipynb_checkpoints/: Dependency Management With Python Poetry-checkpoint.ipynb
Python Multiprocessing/: Python Multiprocessing.ipynb
Recursion/: Untitled.ipynb
SOLID PRINCIPLES/DIP/: dip.py
SOLID PRINCIPLES/ISP/: isp.py
Using Python's pip to Manage Your Projects' Dependencies/: Using Python's pip to Manage Your Projects' Dependencies.ipynb  requirements.txt
data/: house_tiny.csv
data structures/: 01Arrays.ipynb
design patterns/: 01 Foundational Design Principles.ipynb  01_0_encapsulate.py  01_1_encapsulate_property.py  01_2_composition.py
dive into deep learning/: 00 Introduction.ipynb  01 Preliminaries.ipynb  3 Linear Neural Networks for Regression.ipynb
dsa/: Introduction.ipynb
microservices/: 01 Design, Plan and Execute.ipynb
python/pydantic/: basics.py  computed_fields.py  (+5 more)
pytorch zero to gan/: 01_pytorch_basics.ipynb
(+18 files in other folders)
